# SEMANTIC_SURGERY

./: CERTIFIED_SEMANTIC_SURGERY.md  Makefile  README.md  REPORTS.md  RUNS.md  STATUS.md  github_workflow_ci.yml  pyproject.toml
css-probes/: README.md
css_probes/: cli.py  core.py  metrics.py  operators.py  packets.py  report.py  synthetic.py
docs/: BOUNDARY.md  CODEX_IMPLEMENTATION_BRIEF.md  COMMANDS.md  FULL_SPEC_COVERAGE.md  HANDOFF_NOTE.md  INIT.md  NEXT_STEPS.md  PHASE0_COMPLIANCE.md  PROBES.md  REAL_MODEL_ADAPTERS.md  REPO_CONTENTS.md  VALIDATION.md
examples/: prompt_suite_harmless.json
notes/: package_init.txt
reports/: REAL_MODEL_ENVELOPE_ASSESSMENT.md  aether_roundtrip.json  certificate.json  css_probe_report.json  css_probe_report.operator_cards.md  css_probe_report.packet_cards.md  css_probe_results_presentation.html  packet_validation.json  real_activation_surgery_hf_pythia70m.json  real_activation_surgery_hf_pythia70m.operator_cards.md  real_activation_surgery_hf_pythia70m_effect.json  real_activation_surgery_hf_pythia70m_effect.operator_cards.md  real_activation_surgery_hf_pythia70m_grad_multi_effect.json  real_activation_surgery_hf_pythia70m_grad_multi_effect.operator_cards.md  real_effect_sweep_hf_pythia70m.json  real_effect_sweep_hf_pythia70m_grad_multi.json  real_effect_sweep_hf_pythia70m_multi.json  real_effect_vector_paris.json  real_effect_vector_paris_grad_multi.json  real_effect_vector_paris_multi.json  real_envelope_certified_report.json  real_envelope_certified_report.operator_cards.md  real_envelope_forbidden_paris_suite.json  (+4 more)
(+38 files in other folders)
