[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "css-probes"
version = "0.1.0"
description = "Certified Semantic Surgery probe suite for typed bounded operator communication."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Grand Challenge Labs" }]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
css-probes = "css_probes.cli:main"

[tool.setuptools.packages.find]
include = ["css_probes*"]
